新增使用者交易紀錄 API
